# weddingwrangle

./: .gitignore  docker-compose.prod.yml
.github/workflows/: cicd.yml
app/: Dockerfile.prod  pyproject.toml  requirements.txt  run_tests.sh
app/templates/: base_bootstrap.html  guest.html
app/tests/: test_guest_views.py
app/weddingwrangle/: forms.py  initial_data.json  urls.py  views.py
app/weddingwrangle/scripts/: __init__.py  generate_invites.py
app/weddingwrangle/templates/weddingwrangle/: email_rsvp_template.html  guest_upload.html  invites.html  rsvp.html  rsvp_partner.html  rsvp_thank_partner.html  rsvp_thanks.html  wedding_details.html
